# muagent

./: .env.example  .gitignore  BUILD.md  CONFIG.md  Cargo.toml  DEVELOPMENT.md  HOOKS.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  RELEASING.md  RUN.md  SDK.md  STREAM_JSON.md  USAGE.md  package.json
config/: openrouter-gpt54nano.toml
design/: 00-README.md  01-overview.md  02-architecture.md  03-core-loop.md  04-error-policy.md  05-adapters.md  06-capabilities.md  07-filesystem.md  08-platforms.md  09-sdk.md  10-observability-security.md  11-roadmap.md  12-multimodal.md  13-background-execution.md  14-sessions-memory.md  15-long-term-memory.md  16-prompt-design.md  17-thinking-design.md
evals/: agent_bench.rs
scripts/: install.sh  npm-postinstall.js
src/: agent_instructions.rs  cli.rs  config.rs  lib.rs  oauth.rs  sdk.rs  setup.rs  tui.rs
tests/: cli_smoke.rs  http_handshake.rs  m0_core.rs  m0_shell.rs  m1_anthropic_cache_wire.rs  m1_anthropic_thinking_wire.rs  m1_auto_compaction.rs  m1_compaction.rs  m1_fs_paging_limits.rs  m1_fs_read_safety.rs  m1_fs_tools_extra.rs  m1_jsonl_store.rs  m1_linux_tools.rs  m1_live_cache.rs  m1_live_compaction.rs  m1_live_downloaded_context_cases.rs  m1_live_e2e.rs  m1_live_mcp.rs  m1_live_mcp_http.rs  m1_live_nolima_hard.rs  m1_live_openrouter.rs  m1_live_openrouter_cache.rs  m1_live_openrouter_cache_drift.rs  m1_live_orchestration_compare.rs  m1_live_orchestration_quantify.rs  m1_live_runner_default_cachekey.rs  m1_live_sh_exec.rs  m1_live_skill.rs  m1_live_skill_e2e.rs  m1_long_session_memory.rs  m1_model_retry.rs  (+11 more)
(+97 files in other folders)
